Add kube-vim gateway configuration; Project file hirarchy changes
